# NFT-tickets

./: Anchor.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
programs/nft-tickets/: Cargo.toml
programs/nft-tickets/src/: lib.rs
programs/nft-tikets/: Cargo.toml
programs/nft-tikets/src/: lib.rs
tests/: nft-tickets.ts  nft_tikets.spec.ts
